@@ -10,7 +10,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1280</width>
+    <width>1203</width>
     <height>752</height>
    </rect>
   </property>
@@ -540,6 +540,9 @@
              <width>440</width>
              <height>220</height>
             </size>
+           </property>
+           <property name="toolTip">
+            <string/>
            </property>
            <property name="currentIndex">
             <number>0</number>
@@ -1296,28 +1299,6 @@ p, li { white-space: pre-wrap; }
               <bool>false</bool>
              </property>
             </widget>
-            <widget class="QSpinBox" name="powerSpinBox">
-             <property name="geometry">
-              <rect>
-               <x>197</x>
-               <y>17</y>
-               <width>71</width>
-               <height>23</height>
-              </rect>
-             </property>
-             <property name="toolTip">
-              <string>Power used to make this QSO</string>
-             </property>
-             <property name="suffix">
-              <string/>
-             </property>
-             <property name="maximum">
-              <number>15000</number>
-             </property>
-             <property name="value">
-              <number>90</number>
-             </property>
-            </widget>
             <widget class="QLineEdit" name="stationCallsignLineEdit">
              <property name="geometry">
               <rect>
@@ -1447,6 +1428,31 @@ p, li { white-space: pre-wrap; }
              </property>
              <property name="wordWrap">
               <bool>false</bool>
+             </property>
+            </widget>
+            <widget class="QDoubleSpinBox" name="powerSpinBox">
+             <property name="geometry">
+              <rect>
+               <x>200</x>
+               <y>10</y>
+               <width>91</width>
+               <height>22</height>
+              </rect>
+             </property>
+             <property name="toolTip">
+              <string>Power used to do the QSO in watts</string>
+             </property>
+             <property name="suffix">
+              <string/>
+             </property>
+             <property name="maximum">
+              <double>9999.000000000000000</double>
+             </property>
+             <property name="singleStep">
+              <double>25.000000000000000</double>
+             </property>
+             <property name="value">
+              <double>100.000000000000000</double>
              </property>
             </widget>
            </widget>
@@ -2721,7 +2727,7 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1280</width>
+     <width>1203</width>
      <height>19</height>
     </rect>
    </property>
@@ -3220,7 +3226,6 @@ p, li { white-space: pre-wrap; }
   <tabstop>awardsComboBox</tabstop>
   <tabstop>satNamelineEdit</tabstop>
   <tabstop>satModelineEdit</tabstop>
-  <tabstop>powerSpinBox</tabstop>
   <tabstop>operatorLineEdit</tabstop>
   <tabstop>stationCallsignLineEdit</tabstop>
   <tabstop>myLocatorLineEdit</tabstop>
